--- a/_posts/2014-12-24-git-tips.md
+++ b/_posts/2014-12-24-git-tips.md
@@ -1,9 +1,10 @@
 ---
 layout: mine
-title: git tips
+title: "Git: Solving some conflicts when swapping two commits"
+tags: git
 ---
 
-# Solving some conflicts when swapping two commits
+# Git: Solving some conflicts when swapping two commits
 
 Warning: this technique relies on [git-rebase(1)](https://www.kernel.org/pub/software/scm/git/docs/git-rebase.html) knowledge, don't try to use it if you don't know it before.
 
