tig: add the manual link

--- a/_posts/2017-08-10-tig.md
+++ b/_posts/2017-08-10-tig.md
@@ -103,3 +103,7 @@ As a general rule, the "`h`" key in `tig` will show all the configured key bindi
 
 `tig grep` is also an interface for navigating `git grep` results. For git repositories, it's a much faster alternative to `rgrep`, `ack`, `ag` or any other `rgrep` clone.
 It only searches in tracked files though.
+
+# See also
+
+* [The Tig manual](http://jonas.nitro.dk/tig/manual.html)
