--- a/_posts/2017-08-10-tig.md
+++ b/_posts/2017-08-10-tig.md
@@ -3,6 +3,7 @@ layout: mine
 title: Tips for tig
 last_modified_at: 2018-01-20T17:10:33+01:00
 tags: tig git
+accept_comments: true
 ---
 
 # Tips for `tig`
