use gitlab links instead of stupid github

--- a/_posts/2017-08-10-tig.md
+++ b/_posts/2017-08-10-tig.md
@@ -83,7 +83,7 @@ A more complex command is required, we need to retrieve the previous filename (w
 bind blame B <sh -c "tig blame -- %(commit)~ $(git blame -L %(lineno),%(lineno) -p -- %(file) %(commit) | sed -n '/^filename /{s/filename //;p}')"
 ```
 
-The [`git-blamed-diff`](https://github.com/hydrargyrum/attic/tree/master/git) can also prove useful in some situations.
+The [`git-blamed-diff`](https://gitlab.com/hydrargyrum/attic/tree/master/git) can also prove useful in some situations.
 Since `git-blame`/`tig blame` doesn't display removed lines, it can be hard to find when a removed line was introduced.
 
 # Staging content
